# ardupilot-flight-analyst

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: analyze_log.py  sample_output.txt
flight_analyst/: __init__.py  audit.py  classifier.py  cli.py  docs.py  features.py  narrative.py  parser.py
flight_analyst/sitl/: __init__.py  generate_dataset.py  inject.py  scenarios.py
models/: xgb_classifier.json  xgb_classifier_metadata.json
tests/: test_audit.py  test_classifier.py  test_docs.py  test_features.py  test_narrative.py  test_parser.py  test_sitl.py
