[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ardupilot-flight-analyst"
version = "0.1.0"
description = "AI-assisted flight log diagnosis for ArduPilot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
dependencies = [
    "pymavlink>=2.4.41",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "openai>=1.0.0",
]

[project.scripts]
flight-analyst = "flight_analyst.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
